--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "test:parallel": "mocha --require hardhat/register --recursive --parallel --exit",
     "compile": "hardhat compile",
     "deploy": "hardhat deploy",
-    "etherscan-verify": "hardhat etherscan-verify --api-key PSW8C433Q667DVEX5BCRMGNAH9FSGFZ7Q8"
+    "etherscan-verify": "hardhat etherscan-verify --api-key PSW8C433Q667DVEX5BCRMGNAH9FSGFZ7Q8",
+    "fund-local": "hardhat run --network localhost scripts/fund_wallet.js"
   },
   "eslintConfig": {
     "extends": [
