--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "compile": "hardhat compile",
     "deploy": "hardhat deploy",
     "etherscan-verify": "hardhat etherscan-verify --api-key PSW8C433Q667DVEX5BCRMGNAH9FSGFZ7Q8",
-    "fund-local": "hardhat run --network localhost scripts/fund_wallet.js"
+    "fund-local": "hardhat run --network localhost scripts/fund.js"
   },
   "eslintConfig": {
     "extends": [
