--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "chain": "hardhat node --network hardhat --no-deploy",
     "fork": "hardhat node --no-deploy --network hardhat --fork https://eth-mainnet.alchemyapi.io/v2/XLbyCEcaLhQ3x_ZaKBmZqNp8UGgNGX2F",
     "test": "hardhat test --network hardhat",
+    "ltest": "hardhat test --network localhost",
     "test:parallel": "mocha --require hardhat/register --recursive --parallel --exit",
     "compile": "hardhat compile",
     "deploy": "hardhat deploy",
