--- a/package.json
+++ b/package.json
@@ -1,11 +1,5 @@
 {
   "dependencies": {
-    "@chainlink/contracts": "^0.2.1",
-    "@openzeppelin/contracts": "^4.3.1",
-    "@uniswap/v3-core": "^1.0.0",
-    "@uniswap/v3-periphery": "^1.1.1",
-    "ethereum-waffle": "^3.4.0",
-    "hardhat": "^2.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,10 +13,6 @@
     "erc-20-abi": "1.0.0"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
-    "@nomiclabs/hardhat-etherscan": "^2.1.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "chai": "^4.2.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
@@ -32,30 +22,14 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "ethers": "^5.4.6",
-    "hardhat-contract-sizer": "^2.0.3",
-    "hardhat-deploy": "^0.9.1",
-    "hardhat-gas-reporter": "^1.0.4",
-    "mocha": "^9.1.1",
-    "prettier": "^2.3.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.13",
-    "solhint": "^3.3.6",
-    "solidity-coverage": "^0.7.16"
+    "mocha": "^9.1.1"d
   },
   "scripts": {
     "run-dapp": "hardhat deploy && react-scripts start",
     "react-start": "react-scripts start",
     "react-build": "react-scripts build",
     "react-test": "react-scripts test",
-    "react-eject": "react-scripts eject",
-    "chain": "hardhat node --network hardhat --no-deploy",
-    "fork": "hardhat node --no-deploy --network hardhat --fork https://eth-mainnet.alchemyapi.io/v2/XLbyCEcaLhQ3x_ZaKBmZqNp8UGgNGX2F",
-    "test": "hardhat test --network hardhat",
-    "ltest": "hardhat test --network localhost",
-    "test:parallel": "mocha --require hardhat/register --recursive --parallel --exit",
-    "compile": "hardhat compile",
-    "deploy": "hardhat deploy",
-    "etherscan-verify": "hardhat etherscan-verify --api-key PSW8C433Q667DVEX5BCRMGNAH9FSGFZ7Q8",
-    "fund-local": "hardhat run --network localhost scripts/fund.js"
+    "react-eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
