--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "ethers": "^5.4.6",
-    "mocha": "^9.1.1"d
+    "mocha": "^9.1.1"
   },
   "scripts": {
     "run-dapp": "hardhat deploy && react-scripts start",
