--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "erc-20-abi": "1.0.0"
+    "react-scripts": "^4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
