--- a/.github/workflows/skynet.yml
+++ b/.github/workflows/skynet.yml
@@ -19,13 +19,9 @@ jobs:
         run: yarn install
         working-directory: .
 
-      - name: Install react dependencies
-        run: yarn install
-        working-directory: ./React
-
       - name: Build webapp
         run: yarn build
-        working-directory: ./React
+        working-directory: .
         env:
           CI: ""
 
@@ -33,7 +29,7 @@ jobs:
         uses: SkynetLabs/deploy-to-skynet-action@v2
 
         with:
-          upload-dir: ./React/build
+          upload-dir: ./build
           github-token: ${{ secrets.GITHUB_TOKEN }}
           registry-seed: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' && secrets.REGISTRY_SEED || '' }}
           try-files: index.html /index.html
