--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@usedapp/core": "^0.5.4",
+    "@walletconnect/web3-provider": "^1.6.6",
     "bootstrap": "^5.1.3",
+    "moralis": "^0.0.135",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-moralis": "^0.3.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
