--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "@apollo/client": "^3.5.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@usedapp/core": "^0.5.4",
     "@walletconnect/web3-provider": "^1.6.6",
     "bootstrap": "^5.1.3",
+    "graphql": "^16.0.1",
     "moralis": "^0.0.135",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
